--- a/dash-client/package.json
+++ b/dash-client/package.json
@@ -19,7 +19,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.22.1"
+    "react-router-dom": "^6.22.1",
+    "rechart": "^0.0.1",
+    "recharts": "^2.12.2"
   },
   "devDependencies": {
     "@types/node": "^20.11.20",
