--- a/dash-client/package.json
+++ b/dash-client/package.json
@@ -21,12 +21,14 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
     "rechart": "^0.0.1",
-    "recharts": "^2.12.2"
+    "recharts": "^2.12.2",
+    "regression": "^2.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.20",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
+    "@types/regression": "^2.0.6",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-react": "^4.2.1",
